--- a/styles/style.css
+++ b/styles/style.css
@@ -1,6 +1,8 @@
 p,
+a,
 h1,
-h2 {
+h2,
+h3 {
   margin: 0;
 }
 .page {
@@ -183,4 +185,45 @@ h2 {
   line-height: 1.2;
   margin-top: 20px;
   border: 1px solid red; /*убрать в конце временные границы для наглядности*/
+}
+.feynman {
+  margin-top: 100px;
+  height: 890px;
+  background-image: url(../images/feynman.png);
+  background-repeat: no-repeat;
+  background-size: 867px 637px;
+  background-position: bottom left;
+  border: 1px solid red; /*убрать в конце временные границы для наглядности*/
+  position: relative;
+  background-color: #f2f2f2;
+}
+.feynman__title {
+  width: 648px;
+  margin: 100px auto 0;
+  font-size: 120px;
+  font-weight: 600;
+  line-height: 1.15;
+  text-align: center;
+  border: 1px solid red; /*убрать в конце временные границы для наглядности*/
+}
+.feynman__subtitle {
+  width: fit-content;
+
+  margin: 70px auto 0;
+  font-size: 36px;
+  font-weight: normal;
+  line-height: 51px;
+  text-align: center;
+  border: 1px solid red; /*убрать в конце временные границы для наглядности*/
+}
+.feynman__link {
+  font-size: 36px;
+  font-weight: normal;
+  line-height: 51px;
+  text-decoration: none;
+  color: #2f80ed;
+  border: 1px solid red; /*убрать в конце временные границы для наглядности*/
+  position: absolute;
+  right: 0;
+  top: 50%;
 }
