--- a/styles/style.css
+++ b/styles/style.css
@@ -227,3 +227,53 @@ h3 {
   right: 0;
   top: 50%;
 }
+.kaufman {
+  background-color: #1f1f1f;
+  overflow: hidden;
+  margin: 0 auto;
+  position: relative;
+  z-index: -1;
+}
+.section-title_theme-dark {
+  color: white;
+  font-size: 60px;
+  font-weight: 600;
+  line-height: 1.15;
+  margin-top: 90px;
+}
+.section-subtitle_theme-dark {
+  color: white;
+  font-size: 24px;
+  font-weight: normal;
+  line-height: 34px;
+}
+.table_theme-dark {
+  margin-bottom: 90px;
+}
+.table__cell_theme-dark {
+  width: 200px;
+  margin-top: 80px;
+}
+.table__heading_theme-dark {
+  color: white;
+  font-size: 24px;
+  font-weight: 600;
+  line-height: 1.15;
+}
+.table__text_theme-dark {
+  color: white;
+  font-size: 18px;
+  font-weight: normal;
+  line-height: 1.2;
+}
+.kaufman__triangle {
+  margin: 0;
+  height: 877px;
+  width: 877px;
+  background-image: url(../images/kaufman-triangle.svg);
+  position: absolute;
+  right: -210px;
+  top: 0;
+  z-index: -1;
+  border: 1px solid red; /*убрать в конце временные границы для наглядности*/
+}
