--- a/styles/style.css
+++ b/styles/style.css
@@ -2,8 +2,10 @@ p,
 a,
 h1,
 h2,
-h3 {
+h3,
+img {
   margin: 0;
+  padding: 0;
 }
 .page {
   min-width: 1100px;
@@ -15,14 +17,14 @@ h3 {
   /* выше для экранов больше 1600px отцентрировали весь контент */
   font-family: "Helvetica Neue", Arial, sans-serif;
 
-  border: 1px solid red; /*убрать в конце временные границы для наглядности*/
+  /*border: 1px solid red; /*убрать в конце временные границы для наглядности*/
 }
 
 .header {
   height: 100vh;
   min-height: 600px;
   max-height: 756px;
-  border: 1px solid red; /*убрать в конце временные границы для наглядности*/
+  /*border: 1px solid red; /*убрать в конце временные границы для наглядности*/
   /* выше установили ограничения для секции */
   display: flex;
   position: relative;
@@ -35,7 +37,7 @@ h3 {
   height: 568px;
   width: 568px;
   background-color: #2f80ed;
-  border: 1px solid red; /*убрать в конце временные границы для наглядности*/
+  /*border: 1px solid red; /*убрать в конце временные границы для наглядности*/
   position: absolute;
   right: 0;
   top: 64px;
@@ -89,7 +91,7 @@ h3 {
   width: 765px;
 
   background-size: cover;
-  border: 1px solid red; /*убрать в конце временные границы для наглядности*/
+  /*border: 1px solid red; /*убрать в конце временные границы для наглядности*/
 
   background-image: url(../images/header-image.png);
   position: absolute;
@@ -102,7 +104,7 @@ h3 {
 .two-columns {
   display: flex;
   justify-content: space-between;
-  border: 1px solid red; /*убрать в конце временные границы для наглядности*/
+  /*border: 1px solid red; /*убрать в конце временные границы для наглядности*/
   width: 80%;
 
   margin: 100px auto;
@@ -121,14 +123,14 @@ h3 {
   justify-content: space-between;
   width: 80%;
   min-width: 784px;
-  border: 1px solid red; /*убрать в конце временные границы для наглядности*/
+  /*border: 1px solid red; /*убрать в конце временные границы для наглядности*/
   /* min-height: 90%; не используем т.к. плавает при масштабировании*/
 }
 .two-columns__paragraph {
   font-size: 24px;
   font-weight: normal;
   line-height: 34px;
-  border: 1px solid red; /*убрать в конце временные границы для наглядности*/
+  /*border: 1px solid red; /*убрать в конце временные границы для наглядности*/
 }
 .two-columns__paragraph:not(:last-child) {
   margin-bottom: 20px;
@@ -140,7 +142,7 @@ h3 {
   line-height: 34px;
 }
 .digits {
-  border: 1px solid red; /*убрать в конце временные границы для наглядности*/
+  /*border: 1px solid red; /*убрать в конце временные границы для наглядности*/
 }
 .section-title {
   font-size: 60px;
@@ -148,7 +150,7 @@ h3 {
   line-height: 1.15;
   text-align: center;
   width: 60%;
-  border: 1px solid red; /*убрать в конце временные границы для наглядности*/
+  /*border: 1px solid red; /*убрать в конце временные границы для наглядности*/
   margin: 0 auto 20px;
 }
 .section-subtitle {
@@ -157,7 +159,7 @@ h3 {
   line-height: 34px;
   text-align: center;
   width: 60%;
-  border: 1px solid red; /*убрать в конце временные границы для наглядности*/
+  /*border: 1px solid red; /*убрать в конце временные границы для наглядности*/
   margin: 0 auto;
 }
 .table {
@@ -165,46 +167,50 @@ h3 {
   flex-wrap: wrap;
   justify-content: space-between;
   width: 1100px;
-  border: 1px solid red; /*убрать в конце временные границы для наглядности*/
+  /*border: 1px solid red; /*убрать в конце временные границы для наглядности*/
   margin: 0 auto;
 }
 .table__cell {
   width: 250px;
   margin-top: 60px;
-  border: 1px solid red; /*убрать в конце временные границы для наглядности*/
+  /*border: 1px solid red; /*убрать в конце временные границы для наглядности*/
 }
 .table__heading {
   font-size: 24px;
   font-weight: 600;
   line-height: 1.15;
-  border: 1px solid red; /*убрать в конце временные границы для наглядности*/
+  /*border: 1px solid red; /*убрать в конце временные границы для наглядности*/
 }
 .table__text {
   font-size: 18px;
   font-weight: normal;
   line-height: 1.2;
   margin-top: 20px;
-  border: 1px solid red; /*убрать в конце временные границы для наглядности*/
+  /*border: 1px solid red; /*убрать в конце временные границы для наглядности*/
 }
 .feynman {
   margin-top: 100px;
+  padding-top: 100px;
   height: 890px;
   background-image: url(../images/feynman.png);
   background-repeat: no-repeat;
   background-size: 867px 637px;
   background-position: bottom left;
-  border: 1px solid red; /*убрать в конце временные границы для наглядности*/
+  /* /*border: 1px solid red; убрать в конце временные границы для наглядности */
   position: relative;
   background-color: #f2f2f2;
 }
 .feynman__title {
   width: 648px;
-  margin: 100px auto 0;
+  /* margin: 100px auto 0; */
+
+  margin-left: auto;
+  margin-right: auto;
   font-size: 120px;
   font-weight: 600;
   line-height: 1.15;
   text-align: center;
-  border: 1px solid red; /*убрать в конце временные границы для наглядности*/
+  /* /*border: 1px solid red; убрать в конце временные границы для наглядности */
 }
 .feynman__subtitle {
   width: fit-content;
@@ -214,7 +220,7 @@ h3 {
   font-weight: normal;
   line-height: 51px;
   text-align: center;
-  border: 1px solid red; /*убрать в конце временные границы для наглядности*/
+  /*border: 1px solid red; /*убрать в конце временные границы для наглядности*/
 }
 .feynman__link {
   font-size: 36px;
@@ -222,7 +228,7 @@ h3 {
   line-height: 51px;
   text-decoration: none;
   color: #2f80ed;
-  border: 1px solid red; /*убрать в конце временные границы для наглядности*/
+  /*border: 1px solid red; /*убрать в конце временные границы для наглядности*/
   position: absolute;
   right: 0;
   top: 50%;
@@ -275,5 +281,67 @@ h3 {
   right: -210px;
   top: 0;
   z-index: -1;
+  /*border: 1px solid red; /*убрать в конце временные границы для наглядности*/
+}
+.footer {
+  background-color: #1f1f1f;
+  min-height: 350px;
+  margin: 0 auto;
+  border: 1px solid red;
+}
+
+.logo_place_footer {
+  background-image: url(../images/logo_place_footer.svg);
+}
+.footer__columns {
+  display: flex;
+  justify-content: space-between;
+  width: 90%;
+  min-height: 250px;
+  margin: 60px auto 40px;
+  /* padding: 60px 0 40px; */
   border: 1px solid red; /*убрать в конце временные границы для наглядности*/
+}
+.footer__column {
+  border: 1px solid red; /*убрать в конце временные границы для наглядности*/
+}
+.footer__column-content-copiright {
+  flex-basis: 711px;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+}
+.footer__author {
+  margin: 18px 0;
+  color: white;
+  font-size: 18px;
+  font-weight: normal;
+  line-height: 25px;
+}
+.footer__column-heading {
+  color: white;
+  font-size: 18px;
+  font-weight: 600;
+  line-height: 30px;
+  border: 1px solid red; /*убрать в конце временные границы для наглядности*/
+}
+.footer__column-links {
+  display: flex;
+  flex-direction: column;
+  margin: 20px 0 16px;
+  border: 1px solid red; /*убрать в конце временные границы для наглядности*/
+}
+.footer__column-link {
+  font-size: 18px;
+  font-weight: normal;
+  line-height: 30px;
+  color: white;
+
+  text-decoration: none;
+  border: 1px solid red; /*убрать в конце временные границы для наглядности*/
+}
+.footer__social-icon {
+  width: 16px;
+  height: 16px;
+  margin-right: 10px;
 }
