--- a/styles/style.css
+++ b/styles/style.css
@@ -98,8 +98,6 @@ img {
   right: 0;
   bottom: 0;
 }
-/* .description {
-} */
 
 .two-columns {
   display: flex;
@@ -140,9 +138,6 @@ img {
   font-size: 24px;
   font-weight: 600;
   line-height: 34px;
-}
-.digits {
-  /*border: 1px solid red; /*убрать в конце временные границы для наглядности*/
 }
 .section-title {
   font-size: 60px;
@@ -230,13 +225,16 @@ img {
   color: #2f80ed;
   /*border: 1px solid red; /*убрать в конце временные границы для наглядности*/
   position: absolute;
-  right: 0;
+  right: 48px;
   top: 50%;
 }
 .kaufman {
   background-color: #1f1f1f;
+
   overflow: hidden;
   margin: 0 auto;
+  padding-top: 90px;
+  padding-bottom: 90px;
   position: relative;
   z-index: -1;
 }
@@ -245,7 +243,7 @@ img {
   font-size: 60px;
   font-weight: 600;
   line-height: 1.15;
-  margin-top: 90px;
+  /* margin-top: 90px; */
 }
 .section-subtitle_theme-dark {
   color: white;
@@ -253,41 +251,44 @@ img {
   font-weight: normal;
   line-height: 34px;
 }
-.table_theme-dark {
-  margin-bottom: 90px;
-}
+/* .table_theme-dark {
+
+} */
 .table__cell_theme-dark {
   width: 200px;
   margin-top: 80px;
+  /*border: 1px solid red; /*убрать в конце временные границы для наглядности*/
 }
 .table__heading_theme-dark {
   color: white;
   font-size: 24px;
   font-weight: 600;
   line-height: 1.15;
+  /*border: 1px solid red; /*убрать в конце временные границы для наглядности*/
 }
 .table__text_theme-dark {
   color: white;
   font-size: 18px;
   font-weight: normal;
   line-height: 1.2;
+  /*border: 1px solid red; /*убрать в конце временные границы для наглядности*/
 }
 .kaufman__triangle {
   margin: 0;
   height: 877px;
   width: 877px;
-  background-image: url(../images/kaufman-triangle.svg);
+  /* background-image: url(../images/kaufman-triangle.svg); */
   position: absolute;
   right: -210px;
   top: 0;
   z-index: -1;
-  /*border: 1px solid red; /*убрать в конце временные границы для наглядности*/
 }
 .footer {
   background-color: #1f1f1f;
   min-height: 350px;
   margin: 0 auto;
-  border: 1px solid red;
+  overflow: hidden;
+  /*border: 1px solid red; /*убрать в конце временные границы для наглядности*/
 }
 
 .logo_place_footer {
@@ -299,12 +300,12 @@ img {
   width: 90%;
   min-height: 250px;
   margin: 60px auto 40px;
+  /*border: 1px solid red; /*убрать в конце временные границы для наглядности*/
   /* padding: 60px 0 40px; */
-  border: 1px solid red; /*убрать в конце временные границы для наглядности*/
 }
-.footer__column {
-  border: 1px solid red; /*убрать в конце временные границы для наглядности*/
-}
+/* .footer__column {
+  border: 1px solid red;
+} */
 .footer__column-content-copiright {
   flex-basis: 711px;
   display: flex;
@@ -323,13 +324,11 @@ img {
   font-size: 18px;
   font-weight: 600;
   line-height: 30px;
-  border: 1px solid red; /*убрать в конце временные границы для наглядности*/
 }
 .footer__column-links {
   display: flex;
   flex-direction: column;
   margin: 20px 0 16px;
-  border: 1px solid red; /*убрать в конце временные границы для наглядности*/
 }
 .footer__column-link {
   font-size: 18px;
@@ -338,7 +337,6 @@ img {
   color: white;
 
   text-decoration: none;
-  border: 1px solid red; /*убрать в конце временные границы для наглядности*/
 }
 .footer__social-icon {
   width: 16px;
