--- a/styles/style.css
+++ b/styles/style.css
@@ -141,7 +141,9 @@
 .two-columns__paragraph:not(:last-child) {
   margin-bottom: 20px;
 }
-
+.digits {
+  margin-bottom: 100px;
+}
 .section-title {
   margin: 0 auto 20px;
   padding: 0;
@@ -189,19 +191,21 @@
   line-height: 1.2;
 }
 .feynman {
-  margin-top: 100px;
-  padding-top: 100px;
+  overflow: hidden;
+  /* margin-top: 100px; */
+
   height: 890px;
   background-image: url(../images/feynman.png);
   background-repeat: no-repeat;
   background-size: 867px 637px;
   background-position: bottom left;
+  /*border: 1px solid red; /*убрать в конце временные границы для наглядности*/
 
   position: relative;
   background-color: #f2f2f2;
 }
 .feynman__title {
-  margin: 0 auto;
+  margin: 100px auto 0;
   padding: 0;
   width: 648px;
 
