--- a/styles/style.css
+++ b/styles/style.css
@@ -77,6 +77,7 @@
   font-size: 18px;
   font-weight: normal;
   line-height: 25px;
+  z-index: 1;
 }
 
 .header__link {
@@ -88,8 +89,10 @@
 .header__main-illustration {
   height: 608px;
   width: 765px;
-
   background-size: cover;
+  /* background-size: contain; */
+  /* background-repeat: no-repeat; */
+  /* background-position: right; */
 
   background-image: url(../images/header-image.png);
   position: absolute;
