--- a/styles/style.css
+++ b/styles/style.css
@@ -40,6 +40,7 @@
   color: white;
   margin-right: 0;
   margin-top: 80px;
+  width: 200px; /*проверить необходимость*/
 }
 .logo {
   height: 32px;
@@ -249,32 +250,29 @@
   position: relative;
   z-index: -1;
 }
-.section-title_theme-dark {
+.section-title_theme_dark {
   color: white;
   font-size: 60px;
   font-weight: 600;
   line-height: 1.15;
 }
-.section-subtitle_theme-dark {
+.section-subtitle_theme_dark {
   color: white;
   font-size: 24px;
   font-weight: normal;
   line-height: 34px;
 }
-/* .table_theme-dark {
+/* .table_theme_dark {
 
 } */
-.table__cell_theme-dark {
-  width: 200px;
-  margin-top: 80px;
-}
-.table__heading_theme-dark {
+
+.table__heading_theme_dark {
   color: white;
   font-size: 24px;
   font-weight: 600;
   line-height: 1.15;
 }
-.table__text_theme-dark {
+.table__text_theme_dark {
   color: white;
   font-size: 18px;
   font-weight: normal;
