--- a/styles/style.css
+++ b/styles/style.css
@@ -1,3 +1,8 @@
+/* *,
+::before,
+*::after {
+  outline: 1px solid red;
+} */
 .page {
   min-width: 1100px;
   /* мы ещё не умеем делать мобильную версию сайта, */
@@ -7,15 +12,13 @@
   margin: 0 auto;
   /* выше для экранов больше 1600px отцентрировали весь контент */
   font-family: "Helvetica Neue", Arial, sans-serif;
-
-  /*border: 1px solid red; /*убрать в конце временные границы для наглядности*/
 }
 
 .header {
   height: 100vh;
   min-height: 600px;
   max-height: 756px;
-  /*border: 1px solid red; /*убрать в конце временные границы для наглядности*/
+
   /* выше установили ограничения для секции */
   display: flex;
   position: relative;
@@ -28,26 +31,16 @@
   height: 568px;
   width: 568px;
   background-color: #2f80ed;
-  /*border: 1px solid red; /*убрать в конце временные границы для наглядности*/
+
   position: absolute;
   right: 0;
   top: 64px;
 }
 
-/* и элемента с модификатором вида ключ-значение */
-.table__cell_theme_dark {
-  width: 200px;
-  color: white;
-  margin-right: 0;
-  margin-top: 80px;
-  width: 200px; /*проверить необходимость*/
-}
 .logo {
   height: 32px;
   width: 228px;
-  /* background-size: contain;
-  background-repeat: no-repeat;
-  background-position: center; */
+
   background-image: url(../images/logo_place_header.svg);
 }
 .logo_place_header {
@@ -67,7 +60,7 @@
   z-index: 1;
   left: 64px;
 }
-.header__sublitle {
+.header__subtitle {
   margin: 0;
   padding: 0;
 
@@ -90,12 +83,10 @@
 .header__main-illustration {
   height: 608px;
   width: 765px;
-  background-size: cover;
-  /* background-size: contain; */
-  /* background-repeat: no-repeat; */
-  /* background-position: right; */
+  /* background-size: cover; */
 
-  background-image: url(../images/header-image.png);
+  /* background-image: url(../images/header-image.png); */
+  object-fit: cover;
   position: absolute;
   right: 0;
   bottom: 0;
@@ -143,7 +134,7 @@
   line-height: 34px;
 }
 .two-columns__paragraph:not(:last-child) {
-  margin-bottom: 20px;
+  margin-bottom: 30px;
 }
 .digits {
   margin-bottom: 100px;
@@ -195,22 +186,26 @@
   line-height: 1.2;
 }
 .feynman {
-  overflow: hidden;
-  /* margin-top: 100px; */
+  /* overflow: hidden; */
+  display: flex;
+  margin-top: 100px;
 
-  height: 890px;
+  flex-direction: column;
+  justify-content: flex-start;
+  min-height: 890px;
   background-image: url(../images/feynman.png);
   background-repeat: no-repeat;
   background-size: 867px 637px;
   background-position: bottom left;
-  /*border: 1px solid red; /*убрать в конце временные границы для наглядности*/
 
   position: relative;
   background-color: #f2f2f2;
 }
 .feynman__title {
+  /* margin: 0 auto; */
   margin: 100px auto 0;
-  padding: 0;
+  padding: 0px;
+  /* padding-top: 100px; */
   width: 648px;
 
   font-size: 120px;
@@ -220,7 +215,7 @@
 }
 .feynman__subtitle {
   margin: 70px auto 0;
-  padding: 0;
+  padding: 0px;
   width: fit-content;
 
   font-size: 36px;
@@ -248,7 +243,7 @@
   padding-top: 90px;
   padding-bottom: 90px;
   position: relative;
-  z-index: -1;
+  z-index: 0;
 }
 .section-title_theme_dark {
   color: white;
@@ -263,7 +258,7 @@
   line-height: 34px;
 }
 /* .table_theme_dark {
-
+  z-index: 1;
 } */
 
 .table__heading_theme_dark {
@@ -278,15 +273,32 @@
   font-weight: normal;
   line-height: 1.2;
 }
+
+/* и элемента с модификатором вида ключ-значение */
+.table__cell_theme_dark {
+  width: 200px;
+  color: white;
+  /* margin-right: 0; */
+  margin-top: 80px;
+
+  margin-left: 0;
+  z-index: 1;
+}
 .kaufman__triangle {
   margin: 0;
   height: 877px;
   width: 877px;
 
+  /* background-size: contain; */
+  /* background-repeat: no-repeat; */
+  /* background-position: right; */
+
+  background-image: url(../images/kaufman-triangle.svg);
+  background-size: cover;
   position: absolute;
   right: -210px;
   top: 0;
-  z-index: -1;
+  /* z-index: 0; */
 }
 .footer {
   background-color: #1f1f1f;
@@ -305,10 +317,7 @@
   min-height: 250px;
   margin: 60px auto 40px;
 }
-/* .footer__column {
-  border: 1px solid red;
-} */
-.footer__column-content-copiright {
+.footer__column_content_copyright {
   flex-basis: 711px;
   display: flex;
   flex-direction: column;
