--- a/styles/style.css
+++ b/styles/style.css
@@ -165,10 +165,15 @@
   width: 1100px;
 
   margin: 0 auto;
+  padding: 0;
 }
 .table__cell {
   width: 250px;
+  margin: 0;
   margin-top: 60px;
+  list-style-type: none;
+
+  padding: 0;
 }
 .table__heading {
   margin: 0;
