--- a/pages/index.css
+++ b/pages/index.css
@@ -46,3 +46,18 @@
 @import url(../blocks/footer/__column/footer__column.css);
 @import url(../blocks/footer/__column/_content/footer__column_content_copyright.css);
 @import url(../blocks/footer/__social-icon/footer__social-icon.css);
+
+@import url(../blocks/techniques/techniques.css);
+@import url(../blocks/cards/cards.css);
+@import url(../blocks/cards/__item/cards__item.css);
+@import url(../blocks/cards/__image/cards__image.css);
+@import url(../blocks/cards/__description/cards__description.css);
+@import url(../blocks/cards/__title/cards__title.css);
+
+@import url(../blocks/video/video.css);
+
+@import url(../blocks/oakley/oakley.css);
+
+@import url(../blocks/khan/khan.css);
+
+@import url(../blocks/resources/resources.css);
