Realized  Video block. rewrite margins beetwin old blocks

--- a/blocks/feynman/feynman.css
+++ b/blocks/feynman/feynman.css
@@ -1,7 +1,7 @@
 .feynman {
   /* overflow: hidden; */
   display: flex;
-  margin-top: 100px;
+  /* margin-top: 100px; */
 
   flex-direction: column;
   justify-content: flex-start;
