--- a/blocks/khan/khan.css
+++ b/blocks/khan/khan.css
@@ -1,4 +1,8 @@
 .khan {
-  width: 80%;
-  margin: 0 auto;
+  display: flex;
+  /* margin-top: 100px; */
+
+  /* flex-direction: column; */
+
+  background-color: #f2f2f2;
 }
